# admin-pois-manager-data

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
core/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: adminuser.json
point_of_interest/: admin.py  apps.py  enums.py  exceptions.py  models.py  schemas.py  services.py  utils.py
point_of_interest/management/commands/: import_poi_file.py
point_of_interest/migrations/: 0001_initial.py
requirements/: base.in  base.txt  dev.in  dev.txt
scripts/: nginx.conf
tests/point_of_interest/: conftest.py  test_admin.py  test_command.py  test_models.py  test_schemas.py  test_services.py  test_utils.py
