[project]
name = "admin-pois-manager-data"
version = "1.0.0"
description = "Admin panel with Django and Django Admin, to manager PoIs Data"
readme = "README.md"
keywords = [ "Challenge", "PoI", "Django", "Django Admin" ]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12"
]

  [[project.authors]]
  name = "Renan Penna"
  email = "renan.penna.tech@gmail.com"

  [project.license]
  text = "MIT"

  [project.urls]
  homepage = "https://github.com/xarpy/django-admin-manager-data"

[tool.black]
line-length = 88
target-version = [ "py310", "py311", "py312" ]
exclude = """
/(
    \\.git
  | \\.venv
  | venv
  | \\.mypy_cache
  | \\.pytest_cache
  | build
  | dist
  | migrations
)/
"""

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
atomic = true
skip = [
  ".venv",
  "venv",
  "migrations",
  "build",
  "dist",
  "__pycache__"
]
extend_skip = [ "README.md", "*.json" ]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
follow_imports = "silent"
show_column_numbers = true
disallow_untyped_defs = true
disallow_untyped_calls = true
allow_redefinition = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
exclude = "(^tests/|.*/tests/|^.*migrations/.*$)"

[tool.flake8]
max-line-length = 88
verbose = true
indent-size = 4
ignore = [ "E24", "W504", "E501", "F405" ]
extend-ignore = [ "E203", "W503" ]
select = [ "C", "E", "F", "W", "B", "B9" ]
exclude = [
  ".git",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  "venv",
  ".venv",
  "build",
  "dist",
  "**/migrations/*"
]
per-file-ignores = [ "__init__.py:F401" ]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 79
exclude = [ "tests" ]
ignore-regex = [ "^get$", "^mock_.*", ".*BaseClass.*" ]
verbose = 1
color = true
generate-badge = "."
badge-format = "svg"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = [ "test_*.py", "*_test.py", "tests/*.py" ]
testpaths = [ "tests" ]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --reuse-db"
log_cli = true
log_level = "INFO"

[tool.coverage.run]
branch = true
source = [ "point_of_interest", "core" ]
omit = [ "*/tests/*", "*/migrations/*" ]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
  "pragma: no cover",
  "def __str__",
  "if __name__ == .__main__.:"
]

[tool.coverage.html]
directory = "htmlcov"
title = "Admin PoIs Manager Test Coverage Report"
